# Djan_iPlugin

./: README.md
project_django/project_1/: README.md  pyproject.toml
project_django/project_1/website/: db.sqlite3
project_django/project_2/: pyproject.toml
project_django/project_2/mysite/: db.sqlite3
project_django/project_2/mysite/mysite/: settings.py
project_django/project_2/mysite/polls/: models.py  views.py
project_django/project_2/mysite/polls/migrations/: 0001_initial.py
project_fastapi/project_1/src/database/: db.py
