[tool.poetry]
name = "poetry website"
version = "0.1.0"
description = ""
authors = ["iPlugin <real.andreychuk@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bson = "^0.5.10"
pymongo = "^4.3.3"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"