[tool.poetry]
name = "project-django"
version = "0.1.0"
description = ""
authors = ["iPlugin <ipluginua@gmail.com>"]
readme = "README.md"
packages = [{include = "project_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
